@@ -18,6 +18,7 @@ Verilator 4.221 devel
 * Fix MSVC localtime_s (#3124).
 * Fix Bison 3.8.2 error (#3366). [elike-ypq]
 * Fix rare bug in -Oz (V3Localize) (#3286). [Geza Lore, Shunyao CAD]
+* Fix filenames with dots overwriting debug .vpp files (#3373).
 
 
 Verilator 4.220 2022-03-12
